<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#B4E5EA" >

        <!--<ImageButton
            android:id="@+id/btn_kembali"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />-->

        <ImageView
            android:id="@+id/profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laporan_keuangan"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaksi"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"/>

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#bbb"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:text="@string/tanggal"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/catatan"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pemasukan"
        android:textSize="14sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pengeluaran"
        android:textSize="14sp"
        android:textStyle="bold"/>


    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#bbb"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/datalist"
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"

        />

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#bbb"/>

    <TextView
        android:id="@+id/totalpengeluaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pengeluaran"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#D32F2F"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="0dp"
        android:text="@string/total_transaksi"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#bbb"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="0dp"
        android:text="@string/selisih"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/totalselisih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pemasukan"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/totalpemasukan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-47dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pemasukan"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#388E3C"
        />


    <Button
        android:id="@+id/tambahTransaksi"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/tambah_transaksi"
        android:textAllCaps="false"
        android:backgroundTint="#6FC5D6"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>